# spires-inversion

./: .gitattributes  .gitignore  .gitlab-ci.yml  .zenodo.json  CITATION.cff  CLAUDE.md  MANIFEST.in  PYPI_SETUP.md  README.md  pyproject.toml  setup.py  test_dask_method.py
.github/workflows/: build.yml  publish-pypi.yml
doc/: requirements.txt
doc/source/: conf.py  examples.md  getting_started.md  index.rst  reference.rst
docs/superpowers/plans/: 2026-06-24-spires-contract.md
docs/superpowers/specs/: 2026-06-24-spires-repo-split-design.md
examples/: .gitignore  05_sentinel_snow_inversion.ipynb  README.md  example_dask_inversion.py  invert2d.ipynb  legacy_speedy_invert.ipynb  test_interpolator.ipynb  test_inversion.ipynb  test_spectrum_diff.ipynb
examples/development/: cobyla.ipynb  invert2d.ipynb
scripts/: download_test_data.py
spires/: __init__.py  invert.py  legacy.py  parallel.py  spires.cpp
spires_inversion/: __init__.py  grouping.py  interpolator.py  invert.py  legacy.py  parallel.py  spires.cpp  spires.h  spires.i  utol.py
tests/: example.py  test_comparison.py  test_contract_boundary.py  test_dask.py  test_grouping.py  test_legacy.py  test_swig.py  test_threading.py
tests/data/: README.md  lut_HLSS30_b1to13_3um_dust.mat  lut_modis_b1to7_3um_dust.mat  lut_oli_b1to7_3um_dust.mat
