[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "spires-inversion"
description = "Python implementation of SPIRES (SPectral Inversion of REflectance from Snow) for retrieving snow properties from satellite imagery"
authors = [
    { name = "Ned Bair", email = "edwardbair@ucsb.edu" },
    { name = "Niklas Griessbaum" }
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["remote sensing", "snow", "satellite", "spectral unmixing", "MODIS", "Sentinel-2", "Landsat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    # contract validators are called at the speedy_invert_xarray boundary.
    # Not yet on PyPI -> pinned tag from GitHub (swap for a version spec once
    # it publishes).
    "spires-contract @ git+https://github.com/SPIReS-Organization/spires-contract@v0.1.0",
    "numpy",
    "h5py",
    "scipy",
    "xarray",
    "netCDF4",
]
dynamic = ["version"]  # This tells the backend to get version from setuptools_scm


[project.urls]
Homepage = "https://github.com/SPIReS-Organization/spires-inversion"
Documentation = "https://spires-inversion.readthedocs.io"
Repository = "https://github.com/SPIReS-Organization/spires-inversion"
"Bug Tracker" = "https://github.com/SPIReS-Organization/spires-inversion/issues"
Changelog = "https://github.com/SPIReS-Organization/spires-inversion/releases"


[project.optional-dependencies]
dev = [
    "build",
    "tox",
    "setuptools-scm",
    "matplotlib"
]
test = [
    "tox",
    "pytest"
]
docs = [
    "sphinx",
    "sphinx_automodapi",
    "sphinx-rtd-theme",
    "myst_parser",
    "nbsphinx",
    "sphinx_markdown_tables",
    "pydata_sphinx_theme",
    "dask[distributed]",
]


[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"


[tool.setuptools.packages.find]
exclude = ["tests*", "tests.*"]


[tool.pytest.ini_options]
# Only collect tests from these directories
testpaths = ["tests"]
# Add spires_inversion to python path to avoid import mismatches
pythonpath = ["."]
# Don't collect from examples (they require optional dependencies)
norecursedirs = ["examples", "doc", "build", "dist", ".git", ".tox"]
# Collect doctests from spires_inversion package
addopts = "--doctest-modules --ignore=tests/example.py --ignore=spires_inversion/reprojectMODIS.py"
# Configure doctest behavior
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
# Only collect test files matching these patterns
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]